# ohtuvarasto

./: .coverage  .pylintrc  README.md  coverage.xml  kalakukko.txt  muikkukukko.txt
.github/workflows/: main.yml
osa2/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
osa2/poetry-web/: pyproject.toml
osa3/hello-robot/: log.html  output.xml  report.html
src/: index.py
src/tests/: varasto_test.py
