[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["lassilaitinen <lassi.k.laitinen@student.jyu.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pytest = "^8.1.1"
jsonpickle = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
